// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/custom_status/custom_status_text should match snapshot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(63,67,80,0.5)",
        "fontFamily": "OpenSans",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  In a meeting
</Text>
`;

exports[`components/custom_status/custom_status_text should match snapshot with empty text 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "rgba(63,67,80,0.5)",
        "fontFamily": "OpenSans",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
    ]
  }
>
  
</Text>
`;
